Updated index.html and package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "bootstrap": "^5.2.0"
+    "bootstrap": "^5.2.0",
+    "vue": "^3.2.37"
   },
   "name": "wasmminitutorial",
   "description": "Para poder utilizar WebAssembly con C++, es necesario usar una herramienta llamada Emscripten (https://emscripten.org/), que funciona como un compilador de código entre C++ y WebAssembly. En el ejemplo que vamos a generar hoy, estaremos creando un pequeño juego.",
